fixed search icon alignment

--- a/src/app/components/search/_search-form.scss
+++ b/src/app/components/search/_search-form.scss
@@ -21,6 +21,7 @@
 
   .icon {
     color: $medium-blue;
+    margin: 1px 0 0 0;
   }
 
   &:focus {
